--- a/audit-app/package.json
+++ b/audit-app/package.json
@@ -14,7 +14,10 @@
     "@types/quill": "^2.0.10",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "quill": "^1.3.7",
+    "quill-to-pdf": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.5"
   }
 }
