--- a/audit-app/package.json
+++ b/audit-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
@@ -11,16 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.29",
-    "@types/quill": "^2.0.10",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "quill": "^1.3.7",
-    "quill-to-pdf": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.5"
+    "@editorjs/image": "^2.8.1",
+    "editorjs-inline-font-family-tool": "^1.0.4",
+    "editorjs-inline-font-size-tool": "^1.0.1"
   }
 }
