--- a/audit-app/package.json
+++ b/audit-app/package.json
@@ -16,14 +16,11 @@
     "@types/node": "^16.18.29",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "jspdf": "^2.5.1",
-    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0",
-    "react-quilljs": "^1.3.3",
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
