--- a/AuditApp/AuditApp.Api/appsettings.json
+++ b/AuditApp/AuditApp.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "StaticFilesPath": {
-    "ImagesFullPath": "C:\\Egor\\ImageStorage"
+    "StoragePath": "C:\\Egor\\AuditFilesStorage",
+    "ApplicationUrl": "http://localhost:5175/api/"
   }
 }
