Добавил пример использования redux

--- a/AuditApp/AuditApp.Api/appsettings.json
+++ b/AuditApp/AuditApp.Api/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "StaticFilesPath": {
-    "StoragePath": "C:\\Egor\\AuditFilesStorage",
-    "ApplicationUrl": "http://localhost:5175/api/"
+    "StoragePath": "C:\\Egor\\AuditFilesStorage"
   }
 }
