Поправил замечания по пулл реквесту

--- a/AuditApp/AuditApp.Api/appsettings.json
+++ b/AuditApp/AuditApp.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "StaticFilesPath": {
-    "StoragePath": "C:\\Egor\\AuditFilesStorage"
+  "StorageConfiguration": {
+    "BasePath": "C:\\Egor\\AuditFilesStorage"
   }
 }
