--- a/AuditApp/AuditApp.Api/AuditApp.Extranet.csproj
+++ b/AuditApp/AuditApp.Api/AuditApp.Extranet.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AuditApp.Application\AuditApp.Application.csproj" />
+    <ProjectReference Include="..\AuditApp.Infrastructure\AuditApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
