Добавил бэк для пользователя и аудиты к ним

--- a/AuditApp/AuditApp.Api/appsettings.json
+++ b/AuditApp/AuditApp.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "StorageConfiguration": {
     "BasePath": "C:\\Egor\\AuditFilesStorage"
+  },
+  "ConnectionStrings": {
+    "Audits": "Server=TOWER\\SQLEXPRESS;Database=AuditsApp;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
