Сделал правки по реквесту

--- a/AuditApp/AuditApp.Api/AuditApp.Extranet.csproj
+++ b/AuditApp/AuditApp.Api/AuditApp.Extranet.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\AuditApp.Infrastructure\AuditApp.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\Users\Validator\" />
+  </ItemGroup>
+
 </Project>
