--- a/AuditApp/AuditApp.Api/Frontend/package.json
+++ b/AuditApp/AuditApp.Api/Frontend/package.json
@@ -6,9 +6,10 @@
     "@editorjs/editorjs": "^2.27.0",
     "@editorjs/header": "^2.7.0",
     "@editorjs/list": "^1.8.0",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@editorjs/image": "^2.8.1",
     "editorjs-inline-font-family-tool": "^1.0.4",
     "editorjs-inline-font-size-tool": "^1.0.1"
