добавил Dockerfile для бэка

--- a/AuditApp/AuditApp.Api/appsettings.json
+++ b/AuditApp/AuditApp.Api/appsettings.json
@@ -10,6 +10,6 @@
     "BasePath": "C:\\Egor\\AuditFilesStorage"
   },
   "ConnectionStrings": {
-    "Audits": "Server=TOWER\\SQLEXPRESS;Database=AuditsApp;Trusted_Connection=True;TrustServerCertificate=True"
+    "Audits": "Server=192.168.56.1,1433;Database=AuditsApp;User Id=admin;password=qwerty;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=false"
   }
 }
